Run 16 of the Maven top-20 corpus builds thirteen repositories — spring-cloud-alibaba, floci and zipkin past the run-15 walls and into their tests — while the lock count drops to eighteen: tutorials, imported under its Maven profiles for the first time with 1,350 modules, refuses a POM-declared plaintext http repository, and jenkins's build stops on the SpotBugs threshold its plugin configuration now imports