@@ -1,6 +1,6 @@
-# Tier-3 reasons (import ERRORs and jk failures), grouped — run15
+# Tier-3 reasons (import ERRORs and jk failures), grouped — run16
 
-Generated 2026-09-18 11:55. Module prefixes, coordinates, versions and paths are normalized so one line = one distinct cause = one ticket candidate.
+Generated 2026-09-18 15:36. Module prefixes, coordinates, versions and paths are normalized so one line = one distinct cause = one ticket candidate.
 
 ## import Tier 3 (not imported)
 
@@ -42,9 +42,11 @@ Generated 2026-09-18 11:55. Module prefixes, coordinates, versions and paths are
   repos: keycloak
 - (1) G:A names `testsuite/integration-arquillian/servers/app-server/jboss/wildfly/pom.xml`, which only profile `app-server-wildfly` of `testsuite/integration-arquillian/servers/app-server/jboss` lists, and that profile is not active on this machine (activate it with Maven's `-P` and re-import, or list the module at the top level); the lock would fetch it from a repository, where a reactor module is not published, so the dependency was not written.  
   repos: keycloak
+- (1) `<build><extensions>` G:A is the `maven-archetype` packaging, a project template jk does not build; nothing is written for it. Drop it from the POM when the jk build does not need it, or keep running that step with `jk mvn`.  
+  repos: tutorials
 - (1) `<build><extensions>` G:A is the `maven-archetype` packaging, a project template jk does not build; nothing is written for it. Drop it from the POM when the jk build does not need it, or keep running that step with `jk mvn`. (4 modules: extensions/amazon-lambda/maven-archetype, extensions/amazon-lambda-http/maven-archetype, extensions/amazon-lambda-rest/maven-archetype, …)  
   repos: quarkus
-- (1) `<modules>` are declared only in profiles that are not active on this machine (default-jdk8, default-heavy, integration-jdk8, integration-heavy, default-jdk17, default, default-jdk22, default-jdk23, default-jdk24, default-jdk25, default-jdk26, integration-jdk17, integration, integration-jdk22, integration-jdk23, integration-jdk24, integration-jdk25, integration-jdk26, live-all, parents, default-disabled, integration-disabled); no module was imported, so the workspace builds nothing. Activate one as Maven's `-P` does — `jk import pom.xml -P default-jdk8` — or list the modules at the top level.  
+- (1) `<plugin>` G:A is the `bundle` packaging: an OSGi manifest bnd computes, which jk's jar step does not write; nothing is written for it. Drop it from the POM when the jk build does not need it, or keep running that step with `jk mvn`. (3 modules: osgi/osgi-intro-sample-activator, osgi/osgi-intro-sample-service, osgi/osgi-intro-sample-client)  
   repos: tutorials
 - (1) `<plugin>` G:A is the `bundle` packaging: an OSGi manifest bnd computes, which jk's jar step does not write; nothing is written for it. Drop it from the POM when the jk build does not need it, or keep running that step with `jk mvn`. Declared by the root pom.xml, inherited by 1 module.  
   repos: zipkin
@@ -58,12 +60,16 @@ Generated 2026-09-18 11:55. Module prefixes, coordinates, versions and paths are
   repos: jenkins
 - (1) `<type>war</type>` on G:A names an artifact jk has no manifest spelling for; the dependency was not written. A jar of the same module is `{ group, name, version }`, a classified jar adds `classifier`.  
   repos: hadoop
+- (1) `<type>zip</type>` on G:A names an artifact jk has no manifest spelling for; the dependency was not written. A jar of the same module is `{ group, name, version }`, a classified jar adds `classifier`. (2 modules: libraries-apm/new-relic/currency-converter, libraries-apm/new-relic/newrelic-monitoring)  
+  repos: tutorials
 - (1) `<type>zip</type>` on G:A names an artifact jk has no manifest spelling for; the dependency was not written. A jar of the same module is `{ group, name, version }`, a classified jar adds `classifier`. (2 modules: quarkus/dist, testsuite/integration-arquillian/tests/base)  
   repos: keycloak
 - (1) `<type>zip</type>` on G:A names an artifact jk has no manifest spelling for; the dependency was not written. A jar of the same module is `{ group, name, version }`, a classified jar adds `classifier`. (3 modules: test-framework/core, quarkus/tests/junit5, testsuite/integration-arquillian/servers/auth-server/quarkus)  
   repos: keycloak
 - (1) `maven-shade-plugin` relocates org.apache.lucene → org.neo4j.shaded.lucene9; jk relocates packages only in the fat jar of an `[application]`, and a workspace sibling compiles against this module's classes tree, which carries no shaded package, yet `community/lucene-index` (31 files), `community/neo4j` (1 file), `community/dbms` (1 file), `community/community-it/index-it` (1 file) import them. Keep building this module with Maven — `jk mvn -pl community/lucene9-shaded install` publishes G:A into `~/.m2/repository` — and depend on that artifact from a `file://` repository over `~/.m2/repository` in place of the workspace edge.  
   repos: neo4j
+- (1) packaging `war` (`maven-war-plugin`) is not supported: jk builds jars, Boot jars and native images. Keep building this module with `jk mvn package`. (136 modules: microservices-modules/microprofile, web-modules/restx, apache-cxf-modules/cxf-spring, …)  
+  repos: tutorials
 - (1) packaging `war` (`maven-war-plugin`) is not supported: jk builds jars, Boot jars and native images. Keep building this module with `jk mvn package`. (2 modules: hadoop-common-project/hadoop-auth-examples, hadoop-yarn-project/hadoop-yarn/hadoop-yarn-applications/hadoop-yarn-applications-catalog/hadoop-yarn-applications-catalog-webapp)  
   repos: hadoop
 
@@ -71,44 +77,46 @@ Generated 2026-09-18 11:55. Module prefixes, coordinates, versions and paths are
 
 - (1) Cannot resolve dependencies: · No versions of G:A match N-SNAPSHOT · N-SNAPSHOT is a snapshot, and no repository G:A may resolve from serves snapshots: central (releases only), jumpkick (releases only), g  
   repos: questdb
+- (1) repositories.nm-repo uses plaintext http:// (http://repo.numericalmethod.com/maven/): anyone on the network path can replace the bytes jk pins into jk-lock.toml. Use https, or set allow-insecure = true on [repositories.n  
+  repos: tutorials
 
 ## jk build failure
 
 - (1) <path> error: cannot access java.security.acl.Group · class file for java.security.acl.Group not found  
   repos: keycloak
-- (1) <path> error: duplicate class: org.neo4j.cypher.internal.parser.v25.Cypher  
+- (1) <path> error: duplicate class: org.neo4j.cypher.internal.parser.v5.Cypher5Lex  
   repos: neo4j
-- (1) javac returned non-zero exit code  
-  repos: spring-cloud-alibaba
-- (1) protoc failed (exit 1): · Security.proto: File not found. · G:A: Import "Security.proto" was not found or had errors.  
-  repos: hadoop
 - (1) repository `apache.snapshots` at http://repository.apache.org/snapshots, declared by the POM of G:A, was not used: it is plaintext http, and a repository  
   repos: quarkus
-- (1) repository `apache.snapshots` at http://repository.apache.org/snapshots, declared by the POM of G:A, was not used: it is plaintext http, and a repository a POM declares has no table to  
-  repos: floci
-- (1) the compiler worker failed: java.lang.IllegalArgumentException: error: invalid flag: -J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED · at jdk.compiler/com.sun.tools.javac.main.Arguments.reportDiag(G:A) · at jdk.compiler/com.sun.  
-  repos: zipkin
+- (1) spotbugs: 21 findings at or above `spotbugs-fail-on = "warning"` (21 in all)  
+  repos: jenkins
+- (1) spotbugs: 5 findings at or above `fail-on = "warning"` (5 in all)  
+  repos: hadoop
 
 ## jk test failure
 
-- (1) + [1 of 8] G:A - took 33ms  
+- (1) + [1 of 8] G:A - took 52ms  
   repos: dataease
 - (1) 1 test failure  
   repos: thingsboard
+- (1) TestEngine with ID 'junit-jupiter' encountered a critical issue during test discovery: · (1) [ERROR] ClassSelector [className = 'io.github.hectorvent.floci.core.common.ServiceEnablementIntegrationTest', classLoader = null] resolution failed · Source: ClassSour  
+  repos: floci
 - (1) Unable to open DISPLAY  
   repos: cryptomator
-- (1) `parse-build` src holds .groovy sources this module does not compile: jk.toml declares java and not groovy — add groovy = "<version>" to compile them  
-  repos: jenkins
+- (1) test failure: com.alibaba.cloud.sentinel.SentinelAutoConfigurationTests — G:A#testSentinelSystemProperties — java.lang.IllegalStateException: Failed to load ApplicationContext for [WebMergedContextConfigurati  
+  repos: spring-cloud-alibaba
 - (1) test failure: com.alibaba.nacos.logger.adapter.log4j2.Log4J2NacosLoggingAdapterTest — G:A#testIsNeedReloadConfiguration() — java.lang.ClassCastException: class org.apache.logging.slf4j.SLF4JLoggerContext cannot be cast to cla  
   repos: nacos
-- (1) test failure: com.ctrip.framework.apollo.build.sql.converter.ApolloSqlConverterH2Test — G:A#checkH2() — java.lang.IllegalStateException: illegal class path: <path>  
+- (1) test failure: com.ctrip.framework.apollo.build.sql.converter.ApolloSqlConverterAutoGeneratedTest — G:A#checkAutoGenerated() — java.lang.IllegalStateException: illegal class path: <path>  
   repos: apollo
 - (1) test failure: com.iluwatar.corruption.system.AntiCorruptionLayerTest — G:A#antiCorruptionLayerWithExTest() — java.lang.IllegalStateException: Failed to load ApplicationContext for [WebMergedContextConfiguration@15a8cebd testClass  
   repos: java-design-patterns
-- (1) test failure: com.macro.mall.portal.MallPortalApplicationTests — G:A#contextLoads() — java.lang.IllegalStateException: Failed to load ApplicationContext for [WebMergedContextConfiguration@337fb1a5 testClass = com.macro.mall.portal.MallPo  
+- (1) test failure: com.macro.mall.portal.MallPortalApplicationTests — G:A#contextLoads() — java.lang.IllegalStateException: Failed to load ApplicationContext for [WebMergedContextConfiguration@73eae5f testClass = com.macro.mall.portal.MallPor  
   repos: mall
-- (1) test failure: com.xxl.job.executor.test.BaseTests — G:A#test() — java.lang.IllegalStateException: Failed to load ApplicationContext for [WebMergedContextConfiguration@5f32de90 testClass = com.xxl.job.executor.test.  
+- (1) test failure: com.xxl.job.openapi.ExecutorBizTest — G:A#trigger() — java.lang.RuntimeException: Http Request Error (Connection refused (connect failed)). for url : http://G:A/trigger  
   repos: xxl-job
+- (1) test failure: zipkin2.collector.CollectorTest#accept_storageError() — java.lang.AssertionError:  
+  repos: zipkin
 
 ## Maven-side failure (for context)
 
